--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,20 +18,20 @@
     "react-query": "^3.12.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.1",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.2.7",
-    "@storybook/addon-essentials": "^6.2.7",
+    "@storybook/addon-essentials": "^5.3.21",
     "@storybook/addon-links": "^6.2.7",
     "@storybook/builder-webpack5": "^6.4.18",
     "@storybook/manager-webpack5": "^6.4.18",
     "@storybook/node-logger": "^6.2.7",
-    "@storybook/preset-create-react-app": "^4.0.0",
-    "@storybook/react": "^6.2.7",
+    "@storybook/preset-create-react-app": "^1.2.0",
+    "@storybook/react": "^6.1.21",
     "@stryker-mutator/core": "^5.6.1",
     "@stryker-mutator/jest-runner": "^5.6.1",
     "@testing-library/react-hooks": "^5.1.2",
